--- a/contact.html
+++ b/contact.html
@@ -57,9 +57,9 @@
               <h2>Social Media</h2>
               <p>You can find us here:</p>
               <div id="social-media">
-                <a><img src="img/twitter-logo.png" alt="map showing the address"></a>
-                <a><img src="img/fb-logo.png" alt="map showing the address"></a>
-                <a><img src="img/youtube-logo.png" alt="map showing the address"></a>
+                <a href="#"><img src="img/twitter-logo.png" alt="map showing the address"></a>
+                <a href="#"><img src="img/fb-logo.png" alt="map showing the address"></a>
+                <a href="#"><img src="img/youtube-logo.png" alt="map showing the address"></a>
               </div>
             </section>
 
