--- a/game-potr.html
+++ b/game-potr.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Righteousness Studios</title>
+  <title>Path of the Righteous</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -83,7 +83,7 @@
   
       <footer id="site-footer">
         <div class="container">
-          <p>&copy; 2019 Righteousness Studios</p>
+          <p id="potr-footer">&copy; 2019 Righteousness Studios</p>
         </div>
       </footer>
 
