--- a/contact.html
+++ b/contact.html
@@ -74,9 +74,7 @@
 
             <section>
               <h2>Visit Us</h2>
-              <p>
-                Address: Hjältestigen 1, Svenljunga, Sweden
-              </p>
+              <p>Address: Hjältestigen 1, Svenljunga, Sweden</p>
               <iframe id="location-map"
                 src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14422.135888999017!2d13.116369276278318!3d57.49769270330603!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ssv!2sse!4v1572082603930!5m2!1ssv!2sse"></iframe>
             </section>
