--- a/about-us.html
+++ b/about-us.html
@@ -60,7 +60,10 @@
               repellendus
               perspiciatis possimus veritatis tenetur.
             </p>
-          </article>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus excepturi dolor modi culpa at repellat non
+              fuga nemo distinctio, aperiam exercitationem sint ipsum officia ex ab magni tempora. Velit minus iusto nulla
+              consequuntur id!</p>
+            </article>
         </div>
       </main>
 
