--- a/games.html
+++ b/games.html
@@ -55,7 +55,7 @@
             <article>
                 <a href="game-potr.html">
                 <h2>Path of the Righteous</h2>
-                <img src="img/angelic-knight.jpg" alt="A kneeling crusader" class="game-image">
+                <img src="img/angelic-knight.jpg" alt="An angelic knight" class="game-image">
               
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro odit consequatur dignissimos repellat rerum
                   cupiditate
