--- a/games.html
+++ b/games.html
@@ -29,11 +29,14 @@
   
       <header id="site-header">
         <div class="container">
-          <a href="index.html" id="logo"><img src="img/rslogo.png" alt="Righteousness Studios logo"></a>
+          <div>
+            <a href="index.html" id="logo"><img src="img/rslogo.png" alt="Righteousness Studios logo"></a>
+            <a href="index.html" id="text-logo"><img src="img/logo-name.png" alt="Righteousness Studios logo"></a>
+          </div>
           <p id="header-contact"> Contact:<br>
             <a href="tel:0001112223">Tel: 0001112223</a><br>
             <a href="mailto:contact@righteousnessstudios.com">eMail us</a></p>
-          <button onclick="window.location.href='game-sacred-heresy.html';" class="button" id="header-button">Our latest
+          <button onclick="window.location.href='game-sacred-heresy.html';" class="button">Our latest
             release</button>
         </div>
       </header>
