--- a/game-sacred-heresy.html
+++ b/game-sacred-heresy.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>Sacred Heresy</title>
-  <meta name="description" content="">
+  <meta name="description" content="Sacred Heresy - A game by Righteousness Studios">
+  <meta name="author" content="Jakob Sjölin">
+  <meta name="keywords" content="Righteousness, Studios, video games, games, fantasy, high fantasy">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="manifest" href="site.webmanifest">
