--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>Contact Righteousness Studios</title>
-  <meta name="description" content="">
+  <meta name="description" content="Contact us">
+  <meta name="author" content="Jakob Sjölin">
+  <meta name="keywords" content="Righteousness, Studios, video games, games, fantasy, high fantasy">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="manifest" href="site.webmanifest">
