--- a/contact.html
+++ b/contact.html
@@ -32,8 +32,8 @@
       <header id="site-header">
         <div class="container">
           <div>
-            <a href="index.html" id="logo"><img src="img/rslogo.png" alt="Righteousness Studios logo"></a>
-            <a href="index.html" id="text-logo"><img src="img/logo-name.png" alt="Righteousness Studios logo"></a>
+            <a href="index.html" id="logo" aria-label="Righteousness Studios logo"><img src="img/rslogo.png" alt="Righteousness Studios logo"></a>
+            <a href="index.html" id="text-logo" aria-label="Righteousness Studios logo text"><img src="img/logo-name.png" alt="Righteousness Studios logo"></a>
           </div>
           <p id="header-contact"> Contact:<br>
             <a href="tel:0001112223">Tel: 0001112223</a><br>
@@ -62,17 +62,17 @@
               <h2>Social Media</h2>
               <p>You can find us here:</p>
               <div id="social-media">
-                <a href="#"><img src="img/twitter-logo.png" alt="image link to twitter"></a>
-                <a href="#"><img src="img/fb-logo.png" alt="image link to facebook"></a>
-                <a href="#"><img src="img/youtube-logo.png" alt="image link to youtube"></a>
+                <a href="#"><img src="img/twitter-logo.png" alt="image link to twitter" title="Visit our twitter page" aria-label="Visit our twitter page"></a>
+                <a href="#"><img src="img/fb-logo.png" alt="image link to facebook" title="Visit our facebook page" aria-label="Visit our facebook page"></a>
+                <a href="#"><img src="img/youtube-logo.png" alt="image link to youtube" title="Visit our youtube channel" aria-label="Visit our youtube channel"></a>
               </div>
             </section>
 
             <section>
               <h2>Contact Information</h2>
               <p id="contact-info">
-                <a href="tel:0001112223">Tel: 0001112223</a><br>
-                <a href="mailto:contact@righteousnessstudios.com">contact@righteousnessstudios.com</a><br>
+                <a href="tel:0001112223" title="Contact us by phone" aria-label="0 0 0. 1 1 1. 2 2 2 3.">Tel: 0001112223</a><br>
+                <a href="mailto:contact@righteousnessstudios.com" title="Contact us by email" aria-label="contact@righteousnessstudios.com">contact@righteousnessstudios.com</a><br>
                 Postage: 51255 Svenljunga Sweden
               </p>
             </section>
@@ -80,7 +80,7 @@
             <section>
               <h2>Visit Us</h2>
               <p>Address: Hjältestigen 1, Svenljunga, Sweden</p>
-              <iframe id="location-map"
+              <iframe id="location-map" aria-label="Map over the office area"
                 src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14422.135888999017!2d13.116369276278318!3d57.49769270330603!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ssv!2sse!4v1572082603930!5m2!1ssv!2sse"></iframe>
             </section>
 
