--- a/game-potr.html
+++ b/game-potr.html
@@ -81,7 +81,7 @@
           
             </article>
               
-              <button onclick="window.location.href='#';" class="button">Buy Path of the Righteous</button>
+              <button onclick="window.location.href='#';" class="button" title="Buy Path of the Righteous" aria-label="Buy Path of the Righteous">Buy Path of the Righteous</button>
   
             </div>
         </main>
