--- a/game-sacred-heresy.html
+++ b/game-sacred-heresy.html
@@ -76,7 +76,7 @@
 
             </article>
             
-            <button onclick="window.location.href='#';" class="button">Buy Sacred Heresy</button>
+            <button onclick="window.location.href='#';" class="button" title="Buy Sacred Heresy" aria-label="Buy Sacred Heresy">Buy Sacred Heresy</button>
 
           </div>
       </main>
