--- a/contact.html
+++ b/contact.html
@@ -32,23 +32,23 @@
       <header id="site-header">
         <div class="container">
           <div>
-            <a href="index.html" id="logo" aria-label="Righteousness Studios logo"><img src="img/rslogo.png" alt="Righteousness Studios logo"></a>
-            <a href="index.html" id="text-logo" aria-label="Righteousness Studios logo text"><img src="img/logo-name.png" alt="Righteousness Studios logo"></a>
+            <a href="index.html" id="logo" title="Return to the home page" aria-label="Righteousness Studios logo"><img src="img/rslogo.png" alt="Righteousness Studios logo"></a>
+            <a href="index.html" id="text-logo" title="Return to the home page" aria-label="Righteousness Studios logo text"><img src="img/logo-name.png" alt="Righteousness Studios logo"></a>
           </div>
           <p id="header-contact"> Contact:<br>
-            <a href="tel:0001112223">Tel: 0001112223</a><br>
-            <a href="mailto:contact@righteousnessstudios.com">eMail us</a></p>
-          <button onclick="window.location.href='game-sacred-heresy.html';" class="button">Our latest
+            <a href="tel:0001112223" title="Contact us by phone" aria-label="0 0 0. 1 1 1. 2 2 2 3.">Tel: 0001112223</a><br>
+            <a href="mailto:contact@righteousnessstudios.com" title="Contact us by email" aria-label="contact@righteousnessstudios.com">eMail us</a></p>
+          <button onclick="window.location.href='game-sacred-heresy.html';" class="button" title="See our latest release" aria-label="Our latest release">Our latest
             release</button>
         </div>
       </header>
-
+  
       <nav id="site-nav">
         <div class="container">
-          <a href="index.html">Home</a>
-          <a href="games.html">Games</a>
-          <a href="about-us.html">About Us</a>
-          <a href="contact.html">Contact</a>
+          <a href="index.html" title="Return to the home page" aria-label="Home">Home</a>
+          <a href="games.html" title="Browse our games" aria-label="Games">Games</a>
+          <a href="about-us.html" title="Read more about us" aria-label="About Us">About Us</a>
+          <a href="contact.html" title="See our contact information" aria-label="Contact">Contact</a>
         </div>
       </nav>
 
